--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/home.css" />
-        <link rel="stylesheet" href="css/locomotive-scroll.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/home.css" />
+        <link rel="stylesheet" type="text/css" href="css/locomotive-scroll.css" />
         <title>COVID-19</title>
     </head>
     <body>
@@ -14,9 +14,9 @@
             <h1>COVID-19</h1>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Symptoms</a></li>
+                <li><a href="symptoms.html">Symptoms</a></li>
                 <li><a href="guidelines.html">Guidelines</a></li>
-                <li><a href="#">Hotline</a></li>
+                <li><a href="hotline.html">Hotline</a></li>
             </ul>
         </nav>
         <div class="smooth-scroll">
@@ -84,7 +84,7 @@
                         </svg>
                     </div>
                     <div class="global-text">
-                        <h1>600,000,000</h1>
+                        <h1>613,956,272</h1>
                         <p>Total cases of COVID-19 worldwide</p>
                     </div>
                 </div>
@@ -93,27 +93,42 @@
                         <div class="card recovery">
                             <img src="img/health.png" alt="recovery" />
                             <div>
-                                <h1>1,000,000</h1>
+                                <h1>592,775,255</h1>
                                 <p>Total recoveries</p>
                             </div>
                         </div>
                         <div class="card death">
                             <img src="img/death.png" alt="death" />
                             <div>
-                                <h1>1,000,000</h1>
+                                <h1>6,516,875</h1>
                                 <p>Total deaths</p>
                             </div>
                         </div>
                     </div>
-                    <p>Updated: September 9, 2022</p>
+                    <p>Updated: September 12, 2022</p>
                     <img data-scroll data-scroll-speed="2" src="img/virus.png" alt="virus" class="virus virus-3" />
                 </div>
             </section>
+            <section class="references">
+                <h3>References:</h3>
+                <a href="https://www.sciencedirect.com/science/article/pii/S2319417020300445" target="_blank"
+                    >COVID-19: The first documented coronavirus pandemic in history</a
+                >
+                <a
+                    href="https://www.cdc.gov/coronavirus/2019-ncov/your-health/about-covid-19/basics-covid-19.html"
+                    target="_blank"
+                    >Basics of COVID-19 | CDC</a
+                >
+                <a href="https://www.worldometers.info/coronavirus/" target="_blank">COVID-19 Cases</a>
+            </section>
             <footer>
-                <p>Copyright 2022. All rights reserved.</p>
+                <p>Copyright 2022. All rights reserved. Designed and developed by Group 7 - CS11S2.</p>
             </footer>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
-        <script src="js/app.js"></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"
+        ></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
