--- a/guidelines.html
+++ b/guidelines.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/locomotive-scroll.css" />
-        <link rel="stylesheet" href="css/guidelines.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/locomotive-scroll.css" />
+        <link rel="stylesheet" type="text/css" href="css/guidelines.css" />
         <title>COVID-19 | Guidelines</title>
     </head>
     <body>
@@ -14,9 +14,9 @@
             <h1>COVID-19</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Symptoms</a></li>
+                <li><a href="symptoms.html">Symptoms</a></li>
                 <li><a href="#" class="active">Guidelines</a></li>
-                <li><a href="#">Hotline</a></li>
+                <li><a href="hotline.html">Hotline</a></li>
             </ul>
         </nav>
         <div class="smooth-scroll">
@@ -127,10 +127,14 @@
                 <img data-scroll data-scroll-speed="1" src="img/virus.png" alt="virus" class="virus virus-5" />
             </section>
             <footer>
-                <p>Copyright 2022. All rights reserved.</p>
+                <p>Copyright 2022. All rights reserved. Designed and developed by Group 7 - CS11S2.</p>
             </footer>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
-        <script src="js/app.js"></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"
+        ></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        type="text/css"
     </body>
 </html>
