--- a/symptoms.html
+++ b/symptoms.html
@@ -12,6 +12,10 @@
     <body>
         <nav>
             <h1>COVID-19</h1>
+            <div class="burger">
+                <div class="burger-line"></div>
+                <div class="burger-line"></div>
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#" class="active">Symptoms</a></li>
