--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <p id="updated-text">Updated:</p>
-                    <p>Data from <a href="https://disease.sh/">disease.sh API</a></p>
+                    <p>Data from <a href="https://disease.sh/" target="_blank">disease.sh API</a></p>
                     <img data-scroll data-scroll-speed="2" src="img/virus.png" alt="virus" class="virus virus-3" />
                 </div>
             </section>
@@ -131,16 +131,10 @@
             </footer>
         </div>
         <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
-            integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-            type="text/javascript"
-        ></script>
-        <script
             type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"
         ></script>
         <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/covid.js"></script>
     </body>
 </html>
