--- a/guidelines.html
+++ b/guidelines.html
@@ -512,6 +512,12 @@
                     target="_blank"
                     >COVID-19 advice for the public: Getting vaccinated</a
                 >
+                <a href="https://doh.gov.ph/COVID-19/FAQs" target="_blank">COVID-19 FAQS | DOH</a>
+                <a
+                    href="https://www.fda.gov/emergency-preparedness-and-response/coronavirus-disease-2019-covid-19/covid-19-frequently-asked-questions"
+                    target="_blank"
+                    >COVID-19 Frequently Asked Questions | FDA</a
+                >
                 <img data-scroll data-scroll-speed="1" src="img/virus.png" alt="virus" class="virus virus-5" />
             </section>
             <footer>
