--- a/guidelines.html
+++ b/guidelines.html
@@ -356,7 +356,7 @@
                             </div>
                         </div>
 
-                        <h3>C. PROTECTION AND PREVENTION</h3>
+                        <h3>B. PROTECTION AND PREVENTION</h3>
 
                         <div class="accordion-item" id="question14">
                             <a class="accordion-link" href="#question14">
@@ -424,7 +424,7 @@
                             </div>
                         </div>
 
-                        <h3>D. VACCINES, BIOLOGICS, HUMAN TISSUES, and BLOOD PRODUCTS</h3>
+                        <h3>C. VACCINES, BIOLOGICS, HUMAN TISSUES, AND BLOOD PRODUCTS</h3>
 
                         <div class="accordion-item" id="question16">
                             <a class="accordion-link" href="#question16">
