removed scroll speed

--- a/guidelines.html
+++ b/guidelines.html
@@ -47,8 +47,6 @@
                 </div>
                 <div class="img-container">
                     <img
-                        data-scroll
-                        data-scroll-speed="-0.75"
                         src="https://images.unsplash.com/photo-1585760271739-382e5fb7c138?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                         alt="wash hands"
                     />
@@ -79,10 +77,41 @@
                 </div>
                 <div class="img-container">
                     <img
-                        data-scroll
-                        data-scroll-speed="-0.75"
                         src="https://images.unsplash.com/photo-1626351545208-28c9080106ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                         alt="vaccine"
+                    />
+                </div>
+            </section>
+            <section class="distancing">
+                <div>
+                    <h1>Distancing</h1>
+                    <p>
+                        Small particles that people breathe out can contain virus particles. The closer you are to a
+                        greater number of people, the more likely you are to be exposed to the virus that causes
+                        COVID-19. To avoid this possible exposure, you may want to avoid crowded areas, or keep distance
+                        between yourself and others. These actions also protect people who are at high risk for getting
+                        very sick from COVID-19 in settings where there are multiple risks form exposure.
+                    </p>
+                </div>
+                <div class="img-container">
+                    <img
+                        src="https://images.unsplash.com/photo-1610494940231-a07875fb25fc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                        alt="social distancing"
+                    />
+                </div>
+            </section>
+            <section class="masks">
+                <div>
+                    <h1>Masks</h1>
+                    <p>
+                        Masks are made to contain droplets and particles that you breathe, cough, or sneeze out. A
+                        variety of masks are available. Some masks provide a higher level of protection than others.
+                    </p>
+                </div>
+                <div class="img-container">
+                    <img
+                        src="https://images.unsplash.com/photo-1621253680894-f259069d37e9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                        alt="masks"
                     />
                 </div>
             </section>
